<resources>
    <string name="app_name">Mexico</string>
    <string name="action_settings">Ustawienia</string>
    <string name="action_go_web">Chrome</string>
    <string name="action_ccreate_order">Złóż Zamówienie</string>
    <string name="action_share">Udostępnij</string>
    <string name="title_top">Fragment TopFragment</string>
    <string name="open_drawer">Otwórz Szufladę</string>
    <string name="close_drawer">Zamknij Szufladę</string>
    <string name="overview_teotihuacan">Teotihuacan – stanowisko archeologiczne położone na centralnym płaskowyżu, na północny wschód od miasta Meksyk. Nazwa stanowiska pochodzi z języka nahuatl i można ją przetłumaczyć jako: miejsce, w którym ludzie stają się bogami. Równocześnie jest to nazwa kultury, której wpływ na inne ludy Mezoameryki był przemożny.\"
    Miasto zostało nazwane przez Azteków „Teotihuacán”, czyli miejscem, z którego pochodzą bogowie; miejscem, gdzie rodzą się bogowie lub miejscem, w którym ludzie stają się bogami. Nastąpiło to ok. 500 lat po jego upadku</string>
    <string name="history_teotihuacan">Według legend zostało ono zbudowane przez olbrzymów, zwanych quinametin, którzy mieli żyć przed pojawieniem się ludzi i zostali zniszczeni przez wielką katastrofę. Na terenie płaskowyżu, od II w. p.n.e. do II w. n.e. powstało wielkie prekolumbijskie centrum religijne związane z kulturą ludów Mezoameryki. Wokół centrum ceremonialnego i religijnego istniało miasto, którego największy rozkwit przypada na IV-VII w. Jego część mieszkalna została zaplanowana na prostokątnej siatce ulic. Przeprowadzono regulację rzeki San Juan, zbudowano zbiorniki wody deszczowej. W kompleksie miejskim powstały place targowe, spichlerze, teatry i boiska do gry w pelotę. Plan urbanistyczny miasta miał układ dwuosiowy. Jedna z osi była w kierunku północ – południe i miała nazwę Aleja Zmarłych, druga oś ciągnęła się ze wschodu na zachód. Według współczesnych szacunków liczba mieszkańców określana jest na ok. 200 tys. Do IX w. Wpływy centrum obejmowały całą centralną część Wyżyny Meksykańskiej.\n\n
    To święte miasto było celem pielgrzymek wielu plemion żyjących w Mezoameryce. Według mitów indiańskich tu powstał świat, nastąpiło oddzielenie światła od ciemności, powstało słońce i księżyc. Najprawdopodobniej w Teotihuacan powstał system religijny przyjęty później przez inne plemiona, tu kapłani opracowali kalendarz, według którego liczono czas.\n\n
    Kultura Teotihuacán została podzielona na cztery okresy archeologiczne:\n Teotihuacán I Tzacualli (600 r. p.n.e. - 200 r. p.n.e.) – okres kultury będącej pod wpływem ośrodków Choluli, El Tapalcate, Calchicomula. W I w. p.n.e. największe znaczenie osiągają Cuicuilco i Teotihuacán zbudowane na przeciwnych brzegach jeziora Texcoco. Występuje ceramika o charakterystycznej polichromii negatywnej, okres wznoszenia pierwszych piramid i zasiedlenia Oztoyahualco. Jedynym bogiem znanym z tego okresu jest bóg deszczu, pierwowzór późniejszego Tlaloka.\n
    Teotihuacán II Miccaotli (200 r. p.n.e. - 250 r. n.e.) – okres którego centrum było Azcapotzalco i jego wpływy sięgały m.in. do Choluli i Morelos. W okresie tym rozwinęły się ośrodki w Tres Zapotes, Monte Alban II-III, El Tajin. Powstały freski w Superpuestos, rozwinął się kult Tlaloka i powstała świątynia Quetzalcoatla.\n
    Teotihuacán III Tlamilolpa-Xolalpan (250 r. - 650 r.) – okres rozkwitu i supremacji Teotihuacánu nad całą Doliną Meksykańską, handlu z ośrodkami na całym obszarze Mezoameryki, być może wypraw zdobywczych na ziemiach Majów.\n
    Teotihuacán III Ahuizolta-Amantla (650 r. - 900 r.) – okres rozwoju świadomości religijnej, wzrost znaczenia bóstw i rytuałów składania ofiar z ludzi. Powolny upadek miasta i zastąpienie kultury Teotihuacán kulturą toltecką i przeniesienie głównych ośrodków religijnych do Tula.\n\n Kultura Teotihuacán oddziaływała w sensie kulturowym i religijnym na całą Mezoamerykę, aż do dzisiejszej Gwatemali. Niektórzy naukowcy twierdzą, że mieszkańcy Teotihuacán wysyłali ekspedycje wojskowe dla podboju innych plemion, inni zaś, że ich wpływ był pokojowy – poprzez kontakty handlowe i eksport idei. W miastach Zapoteków, Totonaków i Majów znaleziono siedziby przedstawicieli Teotihuacánu – kupców lub przedstawicieli elit.\n\n
    Z drugiej strony niektóre zwyczaje mieszkańców Teotihuacánu pozostały na zawsze związane tylko z tym miejscem. Na przykład jedynie tu chowano zmarłych w pozycji zgiętej pod posadzkami domów[1].
    Bogactwo Teotihuacán wzięło się prawdopodobnie z eksploatacji złóż obsydianu w pobliskiej miejscowości Pachuca oraz Otumba. Mimo, że Otumba było położone ok. 15 km od Teotihuacán, jego mieszkańcy woleli sprowadzać obsydian z Pachuca, odległego o ok. 50 km.\n\n
    Obsydian był przerabiany na narzędzia, uważane za luksusowe. Były to ostrza noży, groty strzał, czy ozdoby. Rzemieślnicy różnych profesji zamieszkiwali osobne dzielnice, podobnie jak w średniowiecznej Europie. Były one rozmieszczone wokół centrum ceremonialno-świątynnego, zamieszkanego przez elity władzy – kapłanów, kupców, wojowników. W dzielnicach rzemieślniczych znaleziono warsztaty ceramiczne, tkackie, obróbki obsydianu, a nawet świątynie poświęcone bogom opiekującym się danym rzemiosłem. Często mieszkali tam ludzie z innych regionów, utrzymujących kontakty z Teotihuacánem. Na peryferiach mieszkali chłopi.\n\n
    Z innych rejonów Mezoameryki sprowadzano kakao, kauczuk, muszle morskie, barwne pióra ptaków tropikalnych, przede wszystkim quetzala i papug oraz futra i to pochodzące zarówno z południowego wschodu – z Gwatemali, jak i z północy – z południowych Stanów Zjednoczonych.\n
    Dodatkowym źródłem bogactwa były pielgrzymki z wielu rejonów do centrum ceremonialnego i religijnego.\n\n
    W okresie rozkwitu nie było w Kotlinie Meksykańskiej miasta, które mogłoby konkurować z Teotihuacánem. On sam zaś kontrolował wiele miast, np. El Tajin, Copan, Altun Ha, Tikal, Kaminaljujú i wiele mniejszych ośrodków rozrzuconych nad Zatoką Meksykańską, na półwyspie Jukatan, aż po dzisiejszy Honduras i Belize.\n
    Podczas gdy w innych ośrodkach wiele przedstawień malarskich czy rzeźbiarskich dotyczyło królów, dynastii i wojen, sztuka Teotihuacánu była poświęcona wyłącznie religii. Z kolej skąpa ilość napisów, i to wyłącznie kalendarzowych, nie pozwala nam nazwać przedstawianych bogów. Można ich było zidentyfikować jedynie przez porównanie do przedstawień azteckich.\n
    Nie wiemy natomiast nic o ludziach zamieszkujących to wielkie centrum, skąd pochodzili, jakim mówili językiem i co się z nimi stało. Wiele lat później Totonakowie znad Zatoki Meksykańskiej mówili, że to ich przodkowie byli założycielami Teotihuacán, ale nie da się tego potwierdzić. Aztekowie również twierdzili, że ich przodkowie wywodzą się z Teotihuacánu.\n\n
    W VII w. centrum Teotihuacánu zostało częściowo zniszczone podczas pożaru. Dzielnice rzemieślnicze nie uległy zniszczeniu. Po pożarze miasto nie wróciło do dawnej świetności. Wyroby rzemieślnicze były coraz gorszej jakości. Stopniowo opuszczane poddało się kolejnym napaściom koczowniczych plemion północy. Prawdopodobnie zostało zajęte przez Tolteków, a później Chichimeków. W X w. zostało opuszczone. Za spadkobierców kultury Teotihuacanu uważa się Tolteków oraz Azteków.</string>
    <string name="overview_cholula">Cholula (Nahuatl languages: Cholōllān) was an important city of pre-Columbian Mesoamerica, dating back to at least the 2nd century BCE, with settlement as a village going back at least some thousand years earlier. The site of Cholula is just west of the modern city of Puebla and served as a trading outpost. Its immense pyramid is the largest such structure in the Americas, and the largest pyramid structure by volume in the world.Cholula is one of the key religious centers of ancient Mexico.\n\n
Cholula is located in the Puebla-Tlaxcala Valley of the central Mexican highlands. It is surrounded to the west by the snow-covered peaks Popocatepetl and Iztaccihuatl, and Malinche to the north. The summer rainy season and the melted snow in winter provide a great environment for irrigation agriculture. There is also a confluence of several perennial streams with the Atoyac River that creates a wetland to the north and east of the urban center. This has resulted in abundant and excellent agriculture during the colonial period, which led to Cholula being known as the richest agricultural region in central Mexico. Maize is the major crop cultivated but they also harvested maguey, chiles, and cochineal for dye. The soil is rich in clay, which made pottery and brick-making an important part of their economy. Textiles and elaborate decorative capes were also popular.\n\n
Cholula\’s strategical location in the center of the Mexican highlands gives it a prime place as a trade outpost. Here, trade routes connected the Gulf coast, the Valley of Mexico, Tehuacan Valley, and La Mixteca Baja through Izucar de Matamoros. From there, trade routes went to the Pacific coast, where the longer Pacific Coast communication and trade route existed.\n\n
Because of its location, Cholula served as the link center where primary trade routes and alliance corridors linked Post-Classic groups of Tolteca-Chichimeca kingdoms with southern Mesoamerica.\n\n
Textiles were of extreme importance for Cholula\’s economy. During the Postclassic period they were a common unit of tribute and exchange. Textiles were manufactured for local consumption and traded extensively by different merchants that frequented the city. Textile production accounts are provided by ethnohistorical and archaeological sources. Spanish writings from Colonial times have noted their excellence in dying techniques and ability to dye wool threads in diverse colors to produce a variety of textiles. Some of the materials they used were cotton, which was probably imported from the Gulf Coast or Southern Puebla, and maguey, feathers, rabbit fur, tree silk, milkweed, and human hair that were all locally found. Artifacts such as spindle whorls found at different Cholula site loci provide evidence for the extensive production of textiles in the site. These are rare from the Formative and the Classic periods but become more prevalent in the Postclassic. Only unbaked-clay whorls may have been used during the earlier periods but these are not preserved in the archaeological record. The high concentration of spindle whorls recovered from Cholula in comparison to other Mesoamerican sites attests to the important role they played in their economy.</string>
    <string name="mapa">Mapa</string>
</resources>