<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >


    <item
        android:id="@+id/map_mexico"
        android:title="@string/mapa"
        android:icon="@drawable/ic_treasure_map"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_create_order"
        android:title="@string/action_ccreate_order"
        android:icon="@drawable/ic_create_order_foreground"
        android:orderInCategory="2"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_go_web"
        android:title="@string/action_go_web"
        android:icon="@drawable/ic_go_web_foreground"
        android:orderInCategory="3"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:orderInCategory="4"
        app:showAsAction="never"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="10"
        app:showAsAction="never" />


</menu>